nullaway_error_BE7C55C3-03C6-409C-AED2-48ED6AC30459.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/function/client/DefaultClientResponseBuilder.java:165: error: [NullAway] dereferenced expression this.originalResponse is @Nullable
			this.cookies = new LinkedMultiValueMap<>(this.originalResponse.cookies());
			                                                              ^
    (see http://t.uber.com/nullaway )
